diplom_projekt_demon 0.0.9